cambaneti gui
cambiamenti grafici per ricetta,controller aggiustato per separazione